0.5.3	UNRELEASED

 BUG FIXES

  * Add in an empty git repository now works. (Jelmer Vernooij, #603823)

  * Support opening of repositories over HTTP where the HTTP server
    doesn't allow directory access. (Jelmer Vernooij, #617078)

  * Support non-ascii characters in tag names. (Jelmer Vernooij, #616995)

 FEATURES

  * Remove all remaining dependencies on C git. (Jelmer Vernooij, #348238)

0.5.2	2010-07-30

 COMPATIBILITY

  * Drop support for Bazaar < 2.0. (Jelmer Vernooij)

 BUG FIXES

  * Cope with kind changes when generating git objects from Bazaar 
    revisions that contain kind changes where a directory is changed 
    into a file and its (file/symlink) children are removed 
    (rather than moved). (#597758, Jelmer Vernooij)

  * Fix reading pack files over http. (#588724, Jelmer Vernooij)

  * Fix 'bzr status' after 'bzr add' in native git working trees.
    (#603800, Chadrik)

  * Provide VersionedFiles.get_annotator(). (#508288, Jelmer Vernooij)

  * Handle non-ascii characters in filenames. (#612291, Jelmer Vernooij)

 FEATURES

  * Support specifying alternative paths for git-upload-pack and 
    git-receive-pack. (Ross Light, #585204)

0.5.1	2010-05-22

 BUG FIXES

  * Mark as compatible with Bazaar 2.2 (Jelmer Vernooij)

  * Use host specified rather than localhost in `bzr serve`.
    (David Coles, #543998)

  * Handle working trees without valid HEAD branch.
    (Jelmer Vernooij, #501385)

  * Default to non-bare repositories when initializing a control directory.
    (Jelmer Vernooij)

  * Cope with -0000 as timezone in Git commits. (Jelmer Vernooij, #539978)

 FEATURES

  * Support 'bzr diff --format=git'. (Jelmer Vernooij, #555994)

 PERFORMANCE
 
  * Avoid the use of InventoryDirectory.children. This speeds up 
    imports significantly. (Jelmer Vernooij)

  * Use Bazaar index files to store the sha map and git objects to cache 
    certain objects. (#520694, Jelmer Vernooij)

0.5.0	2010-03-18

 BUG FIXES
