@@ -13,6 +13,8 @@
 
   * Remove all remaining dependencies on C git. (Jelmer Vernooij, #348238)
 
+  * Add some basic documentation in 'bzr help git'. (Jelmer Vernooij, #605394)
+
 0.5.2	2010-07-30
 
  COMPATIBILITY
